--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,6 @@
       <version>42.7.3</version>
     </dependency>
 
-
     <dependency>
       <groupId>jakarta.servlet.jsp.jstl</groupId>
       <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
@@ -102,12 +101,32 @@
       <version>2.0.0</version>
     </dependency>
 
-
 <!--    <dependency>-->
 <!--      <groupId>javax.servlet</groupId>-->
 <!--      <artifactId>jstl</artifactId>-->
 <!--      <version>1.2</version>-->
 <!--    </dependency>-->
+
+    <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.6.0.Final</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>6.1.11</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>3.3.2</version>
+    </dependency>
 
 
   </dependencies>
